--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./responsive.css">
     <link rel="icon" href="./images/flaticon.webp">
     <link rel="stylesheet" href="https://use.typekit.net/zfo4oyp.css">
     <meta property="og:image" content="{{ url_for(filename='imagens/seo.jpg') }}">
