--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="./responsive.css">
     <link rel="icon" href="./images/flaticon.webp">
+    <meta name="theme-color" content="#e22524">
     <link rel="stylesheet" href="https://use.typekit.net/zfo4oyp.css">
     <meta property="og:image" content="{{ url_for(filename='imagens/seo.jpg') }}">
     <title>Convite Online - Lucca 5 anos</title>
