--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./images/flaticon.webp">
     <meta name="theme-color" content="#811212">
     <link rel="stylesheet" href="https://use.typekit.net/zfo4oyp.css">
-    <meta property="og:image" content="./images/seo.jpg">
+    <meta property="og:image" content="https://i.imgur.com/fgohTfB.jpeg">
     <title>Convite Online - Lucca 5 anos</title>
 </head>
 
