--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="modalforms">
-        <img src="./images/fechar.webp" alt="Icone de fechar" class="fechar">
+        <img src="./images/fechar.webp" alt="Icone de fechar" class="fechar fechar-in">
         <iframe class="forms-google" src="https://docs.google.com/forms/d/e/1FAIpQLSe--_9DNd6ucXWPbee7UGnocPU1zB8xeqgoS4bLZdULP6m6zg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
     </div>
     <div class="modalrodape">
@@ -48,10 +48,10 @@
                 Av. Corifeu de Azevedo Marques, 161 - Butantã, São Paulo
             </p>
             <div id="icons">
-                <a href="" class="link">
+                <a target="_blank" href="https://www.waze.com/pt-BR/live-map/directions/br/sp/av.-corifeu-de-azevedo-marques,-161?to=place.ChIJT21J41BWzpQRHUK3jRZaeqE" class="link">
                 <img src="./images/waze.webp" alt="Logo Waze" class="localicons">
                 </a>
-                <a href="https://g.co/kgs/puKL6ZX" class="link">
+                <a target="_blank" href="https://maps.app.goo.gl/SW8qZxzcFaorwBuN6" class="link">
                 <img src="./images/google-maps.webp" alt="Logo Google Maps" class="localicons">
                 </a>
             </div>
@@ -81,6 +81,6 @@
     <div class="space">
     </div>
 </div>
-<img src="./images/bg-final.webp" alt="" id="bgfundo">
+<img src="./images/bg-final.webp" alt="Carros e personagens Hot Wells" id="bgfundo">
 <script src="./script.js"></script>
 </html>
