--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     <div class="space">
     </div>
 </div>
+<div class="containerbgfinal">
 <img src="./images/bg-final.webp" alt="Carros e personagens Hot Wells" id="bgfundo">
+</div>
 <script src="./script.js"></script>
 </html>
